# bsuir-voice-chat

./: Cargo.toml  config
src/: callbacks.rs  command.rs  main.rs  net_client.rs  text_render.rs  voice_list_item_ui.rs
