[package]
name = "eremeev_voice_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.35", features = ["ttf"] }
bincode = "1.3.3"
serde = { version = "1.0.190", features = ["derive"] }
